--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- 상대경로를 이용한 링크 설정/ target="_blank"가 없으면 기존 페이지에서 열리게 됨--> 
     <p><a href="./index.html" target="_blank">인덱스</a></p>
     <!--절대 경로를 이용한 링크 설정/ 현재 페이지에서 열림-->
-    <a href = "https://www.google.com">GOOGLE</a>
+    <a href = "https://www.google.com">GoOGLE</a>
 </head>
 <body>
     <h3>커피</h3>
